# ClashMetaForAndroid-Hysteria

./: README.md  build.gradle.kts  gradle.properties
.github/patch/: 0003-mihomo-add-native-udp-over-tcp.patch
.github/patch-mihomo/: 0001-mihomo-add-native-udp-over-tcp.patch
.github/workflows/: build-debug.yaml  build-pre-release.yaml  build-release-2abi.yaml  build-release.yaml  update-dependencies.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/: BaseActivity.kt  ExternalControlActivity.kt  HysteriaSettingsActivity.kt  LogcatActivity.kt  LogcatService.kt  SettingsActivity.kt
core/src/foss/golang/clash/adapter/: parser.go
core/src/foss/golang/clash/adapter/outbound/: udpgw.go
core/src/foss/golang/clash/constant/: adapters.go
core/src/foss/golang/clash/transport/udpgw/: udpgw.go  udpgw_test.go
core/src/main/cpp/: CMakeLists.txt  main.c
core/src/main/cpp/badvpn/tun2socks/: SocksUdpGwClient.c  SocksUdpGwClient.h  tun2socks.c
core/src/main/cpp/pdnsd/src/: conff.h  dns.h  helpers.h  thread.h
core/src/main/golang/native/tun/: tun.go
core/src/main/java/com/github/kr328/clash/core/: Clash.kt
core/src/main/java/com/github/kr328/clash/core/bridge/: Bridge.kt
core/src/main/java/com/github/kr328/clash/core/model/: ConfigurationOverride.kt
design/src/main/java/com/github/kr328/clash/design/: HysteriaAccountDesign.kt  HysteriaSettingsDesign.kt  HysteriaTemplateDesign.kt  SettingsDesign.kt
design/src/main/java/com/github/kr328/clash/design/preference/: EditableText.kt  Value.kt
design/src/main/java/com/github/kr328/clash/design/util/: ActivityBar.kt
design/src/main/res/drawable/: ic_baseline_volunteer_activism.xml
design/src/main/res/layout/: design_settings.xml
design/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
service/: build.gradle.kts
service/src/main/java/com/github/kr328/clash/service/: ProfileProcessor.kt  ProfileWorker.kt  TunService.kt
service/src/main/java/com/github/kr328/clash/service/clash/module/: ConfigurationModule.kt  HysteriaModule.kt  SuspendModule.kt  TunModule.kt
service/src/main/java/com/github/kr328/clash/service/model/: HysteriaConfig.kt
service/src/main/java/com/github/kr328/clash/service/remote/: IProfileManager.kt
service/src/main/java/com/github/kr328/clash/service/store/: HysteriaStore.kt
service/src/main/java/com/github/kr328/clash/service/util/: RoutingUtils.kt
xsocks-android-ref/jni/: Android.mk
xsocks-android-ref/jni/badvpn/tun2socks/: tun2socks.c
